fix testimonial spacing

--- a/styles/_reports.sass
+++ b/styles/_reports.sass
@@ -110,6 +110,9 @@
         font-weight: 600
         font-size: 14px
         line-height: 1
+
+  .testimonial
+    padding-bottom: 0px !important
   .testimonial_highlight
     .left, .right
       display: none !important
@@ -156,7 +159,7 @@
       &:after
         content: none
     section
-      margin: 72px auto
+      margin: 96px auto
       max-width: 784px
       padding: 0 32px
       &.testimonial
